--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
     <title>Nep huiswerkopdracht</title>
 </head>
 <body>
+    <nav>
+
+
+
+
+    </nav>
+
+
+    <section>
+        <article>
+            <h1>Huiswerk!</h1>
+            <p>1+1=2</p>
+
+
+
+
+        </article>
+
+
+
+
+
+
+    </section>
+
+
 
 </body>
 </html>
