--- a/index.html
+++ b/index.html
@@ -6,32 +6,24 @@
     <title>Nep huiswerkopdracht</title>
 </head>
 <body>
-    <nav>
-
-
-
-
-    </nav>
-
-
+    <nav></nav>
     <section>
         <article>
-            <h1>Huiswerk!</h1>
+            <h1>huiswerk rekenen!</h1>
+
+            <h2>optelsommen!</h2>
             <p>1+1=2</p>
+            <p>1+2=3</p>
 
+            <h2>delen</h2>
+            <p>2:4=0,5</p>
+            <p>1493769,543:349,8= ???</p>
+            <!--Hopelijk geven de andere antwoorden genoeg punten voor een 6-->
 
-
-
+            <h2>leg de stelling van pythagoras in 2 woorden uit</h2>
+            <p>X dit kan ik niet</p>
+            <!--dit word een 3-->
         </article>
-
-
-
-
-
-
     </section>
-
-
-
 </body>
 </html>
